<resources>
    <string name="app_name">Blog samples</string>

    <!-- all samples list -->
    <string name="activity_sample_list_mvp">"MVP"</string>
    <string name="activity_sample_list_dagger2">"Dagger2"</string>
    <string name="activity_sample_list_butterknife">"ButterKnife"</string>
    <string name="activity_sample_list_okhttp">"OkHttp"</string>
    <string name="activity_sample_list_mockito">"Mockito"</string>
    <string name="activity_sample_list_volley">"Volley"</string>
    <string name="activity_sample_list_rxjava">"RxJava"</string>
    <string name="activity_sample_list_gson">"GSON"</string>
    <string name="activity_sample_list_jackson">"Jackson"</string>
    <string name="activity_sample_list_async">"AsyncTask"</string>
    <string name="activity_sample_list_retrofit">"RetroitFit"</string>
    <string name="activity_sample_list_permission">"Permission"</string>
    <string name="activity_sample_list_ixjava">"IxJava"</string>
    <string name="activity_sample_list_guava">"Guava"</string>
    <string name="activity_sample_list_robolectric">"Robolectric"</string>
    <string name="activity_sample_list_room">"Room"</string>
    <string name="activity_sample_list_android_data_binding">"Android Data Binding"</string>
    <string name="activity_sample_list_leak_canary">"LeakCanary"</string>
    <string name="activity_sample_list_synchronized">"Synchronized"</string>
    <string name="activity_sample_list_android">"Android"</string>

    <!-- mvp demo -->
    <string name="mvp_demo_activity_login">"Log in"</string>
    <string name="mvp_demo_activity_clear">"Clear"</string>
    <string name="mvp_demo_activity_login_success">"Login success"</string>
    <string name="mvp_demo_activity_login_fail">"Login fail"</string>
    <string name="mvp_demo_activity_user_hint">"user name"</string>
    <string name="mvp_demo_activity_password_hint">"password"</string>
    <string name="mvp_demo_activity_please_enter_username">"Please enter user name"</string>
    <string name="mvp_demo_activity_please_enter_password">"Please enter password"</string>

    <!-- dagger2 demo -->
    <string name="dagger2_activity_username">"Username: %1$s"</string>
    <string name="dagger2_activity_password">"Password: %1$s"</string>
    <string name="dagger2_activity_before_inject">"Before inject\n"</string>
    <string name="dagger2_activity_after_inject">"\nAfter inject\n"</string>

    <!-- butter knife -->
    <string name="butter_knife_main_activity_bind_activity_view">"Bind activity view"</string>
    <string name="butter_knife_main_activity_bind_resources">"Bind resources"</string>
    <string name="butter_knife_main_activity_bind_fragment">"Bind fragment"</string>

    <string name="butter_knife_activity_text">"Butter Knife Text"</string>
    <string name="butter_knife_activity_disable_input">"Disable input"</string>
    <string name="butter_knife_activity_enable_input">"Enable input"</string>
    <string name="butter_knife_activity_bind_string">"Bind string resource"</string>
    <string name="butter_knife_activity_bind_dimen">"Bind dimen resource"</string>
    <string name="butter_knife_activity_bind_string_array">"Bind string array resource"</string>

    <string name="butter_knife_activity_binding_string">"Binding~"</string>

    <!-- ok http -->
    <string name="ok_http_activity_execute_directly">Execute directly</string>
    <string name="ok_http_activity_execute_with_callback">Execute with callback</string>

    <!-- synchronized -->
    <string name="sync_activity_test_method">"method"</string>
    <string name="sync_activity_test_static_method">"static method"</string>
    <string name="sync_activity_test_object">"object"</string>
    <string name="sync_activity_test_this">"this"</string>
    <string name="sync_activity_test_synchronized">"Synchronized"</string>
    <string name="sync_activity_test_asynchronized">"Asynchronized"</string>

    <!-- android -->
    <string name="activity_android_asynctask_leak">"AsyncTask leak"</string>
</resources>
