<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/center_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/center_line"
            android:gravity="center_vertical"
            android:text="@string/butter_knife_activity_bind_string" />

        <TextView
            android:id="@+id/bind_string_resource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/center_line"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bind_string_resource"
            android:layout_toLeftOf="@id/center_line"
            android:gravity="center_vertical"
            android:text="@string/butter_knife_activity_bind_dimen" />

        <TextView
            android:id="@+id/bind_dimen_resource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bind_string_resource"
            android:layout_toRightOf="@id/center_line"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bind_dimen_resource"
            android:layout_toLeftOf="@id/center_line"
            android:gravity="center_vertical"
            android:text="@string/butter_knife_activity_bind_string_array" />

        <TextView
            android:id="@+id/bind_string_array_resource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bind_dimen_resource"
            android:layout_toRightOf="@id/center_line"
            android:gravity="center_vertical" />
    </RelativeLayout>

</LinearLayout>